# window-automation-workflow

./: .gitignore  LICENSE  README.md  pyproject.toml
example/limbus_company/: automator.py  daily.py
src/window_automation_workflow/: __init__.py  automator.py  utils.py
